ST5AS-6 Implement Query execution
