# public/swagger/openapi.yaml
@@ -318,6 +318,49 @@ paths:
           $ref: '#/responses/InternalServerError'
         default:
           $ref: '#/responses/Default'
+  /projects/{projectId}/commits/{commitId}/queries/{queryId}/results:
+    parameters:
+      - name: projectId
+        in: path
+        description: ID of the project
+        type: string
+        format: uuid
+        required: true
+      - name: commitId
+        in: path
+        description: ID of the commit
+        type: string
+        format: uuid
+        required: true
+      - name: queryId
+        in: path
+        description: ID of the query
+        type: string
+        format: uuid
+        required: true
+    get:
+      tags:
+        - Element
+      operationId: getQueryResultsByProjectIdCommitIdQueryId
+      summary: Get query results by project, commit, and query
+      produces:
+        - application/ld+json
+        - application/json
+      responses:
+        200:
+          description: Ok
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Element'
+        404:
+          $ref: '#/responses/NotFound'
+        415:
+          $ref: '#/responses/BadContentType'
+        500:
+          $ref: '#/responses/InternalServerError'
+        default:
+          $ref: '#/responses/Default'
   /projects/{projectId}/commits/{commitId}/elements/{relatedElementId}/relationships:
     parameters:
       - name: projectId
@@ -635,9 +678,7 @@ definitions:
       property:
         type: string
       value:
-        type: array
-        items:
-          type: string
+        type: string
       operator:
         type: string
         enum:
